--- a/app/src/main/res/layout/dialog_create_post_enhanced.xml
+++ b/app/src/main/res/layout/dialog_create_post_enhanced.xml
@@ -122,6 +122,13 @@
             android:textSize="12sp"
             android:layout_marginTop="8dp" />
 
+        <CheckBox
+            android:id="@+id/cbAnonymous"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Post as Anonymous"
+            android:layout_marginTop="8dp" />
+
     </LinearLayout>
 
 </ScrollView>
