--- a/app/src/main/res/layout/activity_forum_moderation.xml
+++ b/app/src/main/res/layout/activity_forum_moderation.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/reportsRecycler"
+            android:id="@+id/postsRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8dp"
@@ -40,7 +40,7 @@
         android:id="@+id/emptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No reports to review"
+        android:text="No posts to moderate"
         android:textColor="?android:attr/textColorSecondary"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
